my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:7:3: error: use of undeclared identifier '__m128i'
    7 |   __m128i __m128i_out, __m128i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:3: error: unknown type name '__m128'; did you mean '__mfp8'?
    8 |   __m128  __m128_out, __m128_result;
      |   ^~~~~~
      |   __mfp8
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:9:3: error: use of undeclared identifier '__m128d'
    9 |   __m128d __m128d_out, __m128d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:10:3: error: use of undeclared identifier 'v2u64'
   10 |   v2u64 v2u64_op0, v2u64_op1, v2u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:11:3: error: use of undeclared identifier 'v4i32'
   11 |   v4i32 v4i32_op0, v4i32_op1, v4i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:19:3: error: use of undeclared identifier 'v4i32_op0'
   19 |   v4i32_op0 = (v4i32){0x00000005, 0x00010081, 0x7fff8000, 0x00000000};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:19:16: error: use of undeclared identifier 'v4i32'
   19 |   v4i32_op0 = (v4i32){0x00000005, 0x00010081, 0x7fff8000, 0x00000000};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:20:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   20 |   __m128i_result = (__m128i){0x0000010000000100, 0x0000020000000002};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:20:21: error: use of undeclared identifier '__m128i'
   20 |   __m128i_result = (__m128i){0x0000010000000100, 0x0000020000000002};
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:21:3: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   21 |   __m128i_out = __lsx_vfclass_s((__m128)v4i32_op0);
      |   ^~~~~~~~~~~
      |   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:21:17: error: call to undeclared function '__lsx_vfclass_s'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   21 |   __m128i_out = __lsx_vfclass_s((__m128)v4i32_op0);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:21:34: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   21 |   __m128i_out = __lsx_vfclass_s((__m128)v4i32_op0);
      |                                  ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:22:18: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   22 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                  ^~~~~~~~~~~~~~
      |                  __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:22:35: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   22 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                   ^~~~~~~~~~~
      |                                   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:22:55: error: use of undeclared identifier '__m128i_out'; did you mean '__m128_out'?
   22 |   check_lsx_out(&__m128i_result, &__m128i_out, sizeof(__m128i_out), __FILE__, __LINE__);
      |                                                       ^~~~~~~~~~~
      |                                                       __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:24:3: error: use of undeclared identifier 'v4i32_op0'
   24 |   v4i32_op0 = (v4i32){0xfe02fe02, 0xfe02fe02, 0xfe02fe02, 0xfe02fe02};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:24:16: error: use of undeclared identifier 'v4i32'
   24 |   v4i32_op0 = (v4i32){0xfe02fe02, 0xfe02fe02, 0xfe02fe02, 0xfe02fe02};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:25:3: error: use of undeclared identifier '__m128i_result'; did you mean '__m128_result'?
   25 |   __m128i_result = (__m128i){0x0000000800000008, 0x0000000800000008};
      |   ^~~~~~~~~~~~~~
      |   __m128_result
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:8:23: note: '__m128_result' declared here
    8 |   __m128  __m128_out, __m128_result;
      |                       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfclass_s.c:25:21: error: use of undeclared identifier '__m128i'
   25 |   __m128i_result = (__m128i){0x0000000800000008, 0x0000000800000008};
      |                     ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
